@@ -6,7 +6,7 @@ use Module::Install::Base ();
 
 use vars qw{$VERSION @ISA $ISCORE};
 BEGIN {
-	$VERSION = '1.00';
+	$VERSION = '0.99';
 	@ISA     = 'Module::Install::Base';
 	$ISCORE  = 1;
 }
@@ -46,14 +46,6 @@ sub auto_install {
     my %seen;
     my @requires = map @$_, map @$_, grep ref, $self->requires;
     while (my ($mod, $ver) = splice(@requires, 0, 2)) {
-        $seen{$mod}{$ver}++;
-    }
-    my @build_requires = map @$_, map @$_, grep ref, $self->build_requires;
-    while (my ($mod, $ver) = splice(@build_requires, 0, 2)) {
-        $seen{$mod}{$ver}++;
-    }
-    my @configure_requires = map @$_, map @$_, grep ref, $self->configure_requires;
-    while (my ($mod, $ver) = splice(@configure_requires, 0, 2)) {
         $seen{$mod}{$ver}++;
     }
 
